Bug 398614 - Using --gpu-context=wayland, mpv complains that kwin_wayland doesn't support the xdg_wm_base interface
Summary: Using --gpu-context=wayland, mpv complains that kwin_wayland doesn't support ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: platform-drm (other bugs)
Version First Reported In: 5.13.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-14 10:56 UTC by Kyle Devir
Modified: 2018-09-14 11:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.0
Sentry Crash Report:


Attachments
MPV verbose output (9.24 KB, text/plain)
2018-09-14 10:56 UTC, Kyle Devir
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kyle Devir 2018-09-14 10:56:43 UTC
Created attachment 114951 [details]
MPV verbose output

Despite the interface being present in KWayland, and presumably being advertized, MPV can't see it for some reason.

Or maybe kwin_wayland doesn't implement it yet...?
Comment 1 David Edmundson 2018-09-14 11:18:25 UTC
WTF. 
https://phabricator.kde.org/D13530 didn't get merged. 

Brilliant. 5.15 it is then.
Comment 2 David Edmundson 2018-09-14 11:18:59 UTC
Git commit fcf9acfec50539ebc10a2565863c349241a473a4 by David Edmundson.
Committed on 14/09/2018 at 11:18.
Pushed by davidedmundson into branch 'master'.

Add XDG WmBase support

Test Plan:
Compiled latest GTK
Ran gtk4-demo and used WAYLAND_DEBUG to confirm it used the correct
shell
tested a top level and a popup

Reviewers: #plasma, romangg

Reviewed By: #plasma, romangg

Subscribers: romangg, mart, graesslin, zzag, kwin

Tags: #kwin
FIXED-IN: 5.15.0

Differential Revision: https://phabricator.kde.org/D13530

M  +2    -1    autotests/integration/kwin_wayland_test.h
M  +17   -1    autotests/integration/shell_client_test.cpp
M  +9    -4    wayland_server.cpp
M  +2    -1    wayland_server.h

https://commits.kde.org/kwin/fcf9acfec50539ebc10a2565863c349241a473a4
Comment 3 Kyle Devir 2018-09-14 11:23:37 UTC
Always the small things, I suppose. :)

Is there any chance it would be suitable for adding to the next Plasma patch release?