autotests/integration/kwin_wayland_test.h
@@ -130,7 +130,8 @@ KWayland::Client::Surface *createSurface(QObject *parent = nullptr);
 enum class ShellSurfaceType {
     WlShell,
     XdgShellV5,
-    XdgShellV6
+    XdgShellV6,
+    XdgShellStable
 };
 QObject *createShellSurface(ShellSurfaceType type, KWayland::Client::Surface *surface, QObject *parent = nullptr);
 KWayland::Client::ShellSurface *createShellSurface(KWayland::Client::Surface *surface, QObject *parent = nullptr);
